2016-04-09  Martin Jaros <xjaros32@stud.feec.vutbr.cz>

    * README, COPYING, NEWS, ChangeLog
    * gettext autotools integration